rename directory, add readme

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = light_client/beerus
 	url = https://github.com/trbutler4/beerus
 	branch = android-impl
+[submodule "light_client_app/beerus"]
+	path = light_client_app/beerus
+	url = https://github.com/trbutler4/beerus
+	branch = android-impl
