--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 	path = light_client_app/beerus
 	url = https://github.com/trbutler4/beerus
 	branch = android-impl
+[submodule "light_client_app/beerus-android"]
+	path = light_client_app/beerus-android
+	url = https://github.com/trbutler4/beerus-android
