adding android implementation branch of beerus fork (#11)
* adding android implementation branch of beerus fork

* adding empty android project

* rename directory, add readme

* remove broken beerus submodule

* adding beerus fork

* remove old submodules

* adding beerus fork

* remove old submodule and old dir

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "light_client_app/snphone-beerus"]
+	path = light_client_app/snphone-beerus
+	url = https://github.com/suffix-labs/snphone-beerus
 [submodule "snphone_platform_manifest"]
 	path = snphone_platform_manifest
 	url = https://github.com/suffix-labs/snphone_platform_manifest
