feat: account design conversion

--- a/wallet_app/android/app/src/main/AndroidManifest.xml
+++ b/wallet_app/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,16 @@
         <activity android:name=".AddTokenActivity"
             android:exported="true"
             android:theme="@style/Theme.Walletapp"/>
+        <activity android:name=".AccountPasswordActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Walletapp"/>
+        <activity android:name=".SeedPhraseActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Walletapp"/>
+
+        <activity android:name=".WalletActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Walletapp"/>
     </application>
 
 </manifest>
