retrieve an account balance

--- a/wallet_app/android/app/src/main/AndroidManifest.xml
+++ b/wallet_app/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
         <activity android:name=".AddTokenActivity"
             android:exported="true"
             android:theme="@style/Theme.Walletapp"/>
+        <activity android:name=".AccountBalanceActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Walletapp"/>
     </application>
 
 </manifest>
