--- a/wallet_app/android/app/src/main/AndroidManifest.xml
+++ b/wallet_app/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -33,7 +36,7 @@
             android:exported="true"
             android:theme="@style/Theme.Walletapp"/>
 
-        <activity android:name=".AccountBalanceActivity"
+        <activity android:name=".ui.activity.AccountBalanceActivity"
             android:exported="true"
             android:theme="@style/Theme.Walletapp"/>
 
