--- a/wallet_app/android/app/src/main/AndroidManifest.xml
+++ b/wallet_app/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -32,6 +35,11 @@
         <activity android:name=".AddTokenActivity"
             android:exported="true"
             android:theme="@style/Theme.Walletapp"/>
+
+        <activity android:name=".ui.activity.AccountBalanceActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Walletapp"/>
+
         <activity android:name=".AccountPasswordActivity"
             android:exported="true"
             android:theme="@style/Theme.Walletapp"/>
