working on emulator

--- a/lightclientservice/app/src/main/AndroidManifest.xml
+++ b/lightclientservice/app/src/main/AndroidManifest.xml
@@ -12,10 +12,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LightClientService"
         tools:targetApi="31">
+        <activity
+            android:name="com.snphone.lightclientservice.MainActivity"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <service
             android:name=".BeerusService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
     </application>
 
 </manifest>
