--- a/wallet_app/android/gradle/libs.versions.toml
+++ b/wallet_app/android/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ activity = "1.9.1"
 constraintlayout = "2.1.4"
 navigationCompose = "2.7.7"
 retrofit = "2.9.0"
+kotlinScriptRuntime = "1.9.0"  # Add this line if it's not already there
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
@@ -49,6 +50,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+kotlin-script-runtime = { module = "org.jetbrains.kotlin:kotlin-script-runtime", version.ref = "kotlinScriptRuntime" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
