feat: create wallet and generate key screens

--- a/wallet_app/android/app/src/main/AndroidManifest.xml
+++ b/wallet_app/android/app/src/main/AndroidManifest.xml
@@ -43,7 +43,17 @@
         <activity android:name=".AccountPasswordActivity"
             android:exported="true"
             android:theme="@style/Theme.Walletapp"/>
+
         <activity android:name=".RecoveryPhraseActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Walletapp"/>
+
+        <activity android:name=".ui.activity.CreateAccountActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Walletapp"/>
+
+
+        <activity android:name=".ui.activity.AccountInfoActivity"
             android:exported="true"
             android:theme="@style/Theme.Walletapp"/>
 
