--- a/lightclientservice/Cargo.toml
+++ b/lightclientservice/Cargo.toml
@@ -68,6 +68,8 @@ clap = { version = "4.5.13", features = ["derive"] }
 # for compiling for android
 jni = "0.21.1"
 jni-sys = "0.4.0"
+android_log = "0.1.3"
+log = "0.4.22"
 
 [dev-dependencies]
 wiremock = "0.6.1"
