feat: implement create account and import existing account flow (#97)
* feat: create wallet and generate key screens

* feat: import key flow

* fix: remove enable

--- a/wallet_app/android/app/src/main/AndroidManifest.xml
+++ b/wallet_app/android/app/src/main/AndroidManifest.xml
@@ -43,13 +43,35 @@
         <activity android:name=".AccountPasswordActivity"
             android:exported="true"
             android:theme="@style/Theme.Walletapp"/>
+
         <activity android:name=".RecoveryPhraseActivity"
             android:exported="true"
             android:theme="@style/Theme.Walletapp"/>
 
+        <activity android:name=".ui.activity.CreateAccountActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Walletapp"/>
+
+
+        <activity android:name=".ui.activity.AccountInfoActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Walletapp"/>
+
+
+        <activity android:name=".CreatePinActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Walletapp"/>
+
+
         <activity android:name=".WalletActivity"
             android:exported="true"
             android:theme="@style/Theme.Walletapp"/>
+
+
+        <activity android:name=".ImportExistingKeyActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Walletapp"/>
+
     </application>
 
 </manifest>
