--- a/wallet_app/gradle/libs.versions.toml
+++ b/wallet_app/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-activityCompose = "1.9.1"
+activityCompose = "1.9.3"
 agp = "8.5.2"
 common = "1.1.1"
 converterGson = "2.9.0"
@@ -7,7 +7,7 @@ core = "4.8.7"
 hiltAndroid = "2.51"
 hiltNavigationCompose = "1.2.0"
 hiltNavigationComposeVersion = "1.2.0"
-kotlin = "1.9.0"
+kotlin = "2.0.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -15,18 +15,20 @@ espressoCore = "3.6.1"
 appcompat = "1.7.0"
 kotlinxCoroutinesAndroid = "1.7.3"
 kotlinxCoroutinesCore = "1.7.3"
-lifecycleViewmodelCompose = "2.8.4"
+lifecycleViewmodelCompose = "2.8.6"
 loggingInterceptor = "4.11.0"
 material = "1.12.0"
-activity = "1.9.1"
+activity = "1.9.3"
 constraintlayout = "2.1.4"
-navigationCompose = "2.7.7"
+navigationCompose = "2.8.3"
 navigationComposeVersion = "2.8.3"
 navigationDynamicFeaturesFragment = "2.8.3"
 navigationFragment = "2.8.3"
 navigationTesting = "2.8.3"
 navigationUi = "2.8.3"
 retrofit = "2.9.0"
+securityCrypto = "1.0.0"
+securityCryptoVersion = "1.1.0-alpha06"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
@@ -44,6 +46,8 @@ androidx-navigation-fragment = { module = "androidx.navigation:navigation-fragme
 androidx-navigation-testing = { module = "androidx.navigation:navigation-testing", version.ref = "navigationTesting" }
 androidx-navigation-ui = { module = "androidx.navigation:navigation-ui", version.ref = "navigationUi" }
 androidx-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata" }
+androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "securityCrypto" }
+androidx-security-crypto-v110alpha06 = { module = "androidx.security:security-crypto", version.ref = "securityCryptoVersion" }
 androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 common = { module = "android.arch.lifecycle:common", version.ref = "common" }
@@ -65,4 +69,6 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+
 
