--- a/snphone-contracts/Scarb.toml
+++ b/snphone-contracts/Scarb.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 
 [dependencies]
 starknet = "2.6.3"
+openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.10.0" }
 
 [dev-dependencies]
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.20.0" }
