feat: adding transfer funds (#122)
* feat: adding transfer funds

* removing local.properties

* adding local.properties to .gitignore

* minor fix

* rollback local.properties file

* minor fix

* adding dropdown for eth and strk

* sending eth

--- a/wallet_app/app/src/main/AndroidManifest.xml
+++ b/wallet_app/app/src/main/AndroidManifest.xml
@@ -27,11 +27,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.transfer.SendActivity"
+            android:name=".ui.transfer.SendScreen"
             android:exported="true"
             android:theme="@style/Theme.Walletapp"/>
         <activity
-            android:name=".ui.transfer.ReceiverActivity"
+            android:name=".ui.transfer.ReceiverScreen"
             android:exported="true"
             android:theme="@style/Theme.Walletapp"/>
         <activity android:name=".ui.account.AddTokenActivity"
